--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,17 @@
 {
-  "presets": ["es2015"],
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "useBuiltIns": "usage",
+        "corejs": 3
+      }
+    ]
+  ],
   "plugins": [
-    "transform-runtime",
+    "@babel/transform-runtime",
     "transform-class-properties",
-    "transform-object-rest-spread",
+    "@babel/plugin-proposal-object-rest-spread",
     "transform-export-extensions"
   ]
 }
