--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-base",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "author": "fzac",
   "description": "template with webpack",
   "license": "MIT",
@@ -14,41 +14,41 @@
     "lint:js": "eslint ."
   },
   "dependencies": {
+    "@babel/runtime": "^7.7.6",
     "jquery": "^3.2.1",
-    "sanitize.css": "^5.0.0"
+    "sanitize.css": "^11.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.11.4",
-    "babel-eslint": "^6.1.2",
-    "babel-core": "^6.0.0",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-transform-class-properties": "^6.11.5",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.7.6",
+    "@babel/polyfill": "^7.7.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/register": "^7.7.4",
+    "babel-loader": "^8.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-export-extensions": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-register": "^6.11.6",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "browser-sync": "^2.23.1",
-    "css-loader": "^0.28.4",
-    "css-mqpacker": "^6.0.1",
-    "csswring": "^6.0.0",
-    "ejs": "^2.5.7",
+    "core-js": "3",
+    "css-loader": "^3.3.2",
+    "css-mqpacker": "^7.0.0",
+    "csswring": "^7.0.0",
+    "ejs": "^3.0.1",
     "ejs-html-loader": "^4.0.1",
     "eslint": "^6.5.1",
     "extract-loader": "^3.1.0",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^3.0.1",
-    "glob": "^7.1.2",
+    "glob": "^7.1.6",
     "html-srcsets-loader": "^0.5.1",
     "lodash": "^4.17.11",
-    "postcss": "^6.0.8",
+    "postcss": "^7.0.25",
     "postcss-cssnext": "^3.1.0",
-    "postcss-import": "^10.0.0",
+    "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
-    "postcss-nesting": "^2.3.1",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9",
+    "postcss-nesting": "^7.0.1",
+    "style-loader": "^1.0.1",
+    "url-loader": "^3.0.0",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.1.11"
